fix align issue

--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,9 @@ body {
   font-weight:700 !important;
   font-size: 14px;
 }
+.MuiDataGrid-columnHeaderTitle:first-child{
+  margin-left: 31px;
+}
 .MuiDataGrid-columnHeaderTitle{
   color:#9fa2b4;
   font-weight:700 !important;
